--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "react-boilerplate",
+    "name": "house-price-predictor",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -12,15 +12,23 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
+        "@mui/material": "^5.14.17",
+        "@mui/system": "^5.14.17",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-leaflet": "^4.2.1"
     },
     "devDependencies": {
         "@babel/core": "^7.23.0",
         "@babel/preset-env": "^7.22.20",
         "@babel/preset-react": "^7.22.15",
         "babel-loader": "^9.1.3",
+        "css-loader": "^6.8.1",
+        "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.5.3",
+        "style-loader": "^3.3.3",
         "webpack": "^5.88.2",
         "webpack-cli": "^5.1.4",
         "webpack-dev-server": "^4.15.1"
