--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@emotion/react": "^11.11.1",
+        "@emotion/react": "^11.11.3",
         "@emotion/styled": "^11.11.0",
-        "@mui/material": "^5.14.17",
+        "@mui/icons-material": "^5.15.4",
+        "@mui/material": "^5.15.4",
         "@mui/system": "^5.14.17",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
