--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@mui/icons-material": "^5.15.4",
         "@mui/material": "^5.15.4",
         "@mui/system": "^5.14.17",
+        "axios": "^1.6.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-leaflet": "^4.2.1"
