--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@mui/material": "^5.15.4",
         "@mui/system": "^5.14.17",
         "axios": "^1.6.7",
+        "cypress": "^13.6.4",
         "framer-motion": "^10.18.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
